<resources>
    <string name="app_name" translatable="false">Minimal Library</string>
    <string name="more" translatable="false">More</string>
    <string name="search" translatable="false">Search</string>
    <string name="library" translatable="false">Library</string>
    <string name="favorite" translatable="false">Favorite</string>
    <string name="wish_list" translatable="false">Wish list</string>
    <string name="about" translatable="false">About</string>
    <string name="filter" translatable="false">Filter</string>
    <string name="details" translatable="false">Review</string>
    <string name="edit" translatable="false">Edit</string>
    <string name="settings" translatable="false">Settings</string>
    <string name="author" translatable="false">Author</string>
    <string name="title" translatable="false">Title</string>
    <string name="description" translatable="false">Description</string>
    <string name="error_message_edit_text" translatable="false">This field cannot be empty"</string>
    <string name="save" translatable="false">Save</string>>
    <string name="delete" translatable="false">Delete</string>>
    <string name="share" translatable="false">Share</string>>
    <string name="share_text" translatable="false">Title book %1$s by author %2$s</string>
    <string name="add_favorites_snackbar" translatable="false">Added to favorites</string>
    <string name="removed_favorites_snackbar" translatable="false">Removed from favorites</string>
    <string name="snackbar_undo" translatable="false">UNDO</string>
    <string name="snackbar_removed_book" translatable="false">This is book removed</string>
    <string name="button_add_photo" translatable="false">Add photo</string>
    <string name="change_photo" translatable="false">Change photo</string>
    <string name="filter_by_title" translatable="false">By title</string>
    <string name="filter_by_author" translatable="false">By author</string>
    <string name="filter_by_date" translatable="false">By date</string>
    <string name="yes" translatable="false">Yes</string>
    <string name="no" translatable="false">No</string>
    <string name="delete_alert_dialog_message" translatable="false">Are you sure you want to delete this book?</string>
    <string name="email_address" translatable="false">tenuchon@gmail.com</string>
    <string name="app_version" translatable="false">Version: %1$s</string>
    <string name="author_card_book" translatable="false">by %1$s</string>
    <string name="contact_me" translatable="false">You can contact me at</string>
    <string name="githab_address" translatable="false">https://github.com/tenuchon/Minimal-Library</string>
    <string name="made_by" translatable="false">Made by tenuchon</string>
    <string name="list_empty" translatable="false">List empty</string>
    <string name="dark_mode" translatable="false">Dark mode</string>
    <string name="hint_search_view" translatable="false">Enter book title</string>
</resources>
