<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|top"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="120dp"
        android:src="@drawable/ic_open_book" />

    <TextView
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/tv_version"
        style="@style/AboutTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_version" />

    <TextView
        style="@style/AboutTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/made_by" />

    <TextView
        style="@style/AboutTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_me" />

    <TextView
        style="@style/AboutTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="email"
        android:linksClickable="true"
        android:text="@string/email_address" />

    <TextView
        style="@style/AboutTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:linksClickable="true"
        android:text="@string/githab_address" />

</LinearLayout>