<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary">
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                >
                <ImageButton
                    android:id="@+id/ib_toolbar_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="?attr/selectableItemBackground"
                    android:src="@drawable/ic_close"
                    android:layout_gravity="start"
                    />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/bt_toolbar_save"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="4dp"
                    android:text="@string/save"
                    app:rippleColor="@color/gray"
                    android:layout_gravity="end"
                    android:textColor="@color/white"
                    />
            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>



    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:background="@drawable/shape_image_add_photo" />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:text="Add photo"
                app:icon="@drawable/ic_add_a_photo" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_title"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:counterEnabled="true"
                app:counterMaxLength="40"
                android:layout_marginTop="16dp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_title_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title"
                    android:maxLength="40"
                    android:inputType="textCapSentences|textAutoCorrect"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_author"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:errorEnabled="true"
                app:counterMaxLength="40"
                android:layout_marginTop="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_author_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="40"
                    android:hint="@string/author"
                    android:inputType="textCapSentences|textAutoCorrect"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_description"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:counterEnabled="true"
                app:counterMaxLength="200"
                app:errorTextAppearance="@string/title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_description_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine|textCapCharacters|textAutoCorrect"
                    android:lines="8"
                    android:maxLength="200"
                    android:gravity="top"
                    android:hint="@string/description" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        </androidx.core.widget.NestedScrollView>
    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>